syntax = "proto3";

option csharp_namespace = "HolyShitServer.Src.Network.Packets";

import "Common.proto";
import "Auth.proto";
import "Lobby.proto";
import "Game.proto";

message GamePacket {
  oneof payload {
    // Auth messages
    C2SLoginRequest login_request = 1;
    S2CLoginResponse login_response = 2;
    
    // Lobby messages
    C2SCreateRoomRequest create_room_request = 3;
    S2CCreateRoomResponse create_room_response = 4;
    C2SGetRoomListRequest get_room_list_request = 5;
    S2CGetRoomListResponse get_room_list_response = 6;
    C2SJoinRoomRequest join_room_request = 7;
    S2CJoinRoomResponse join_room_response = 8;
    C2SJoinRandomRoomRequest join_random_room_request = 9;
    S2CJoinRandomRoomResponse join_random_room_response = 10;
    S2CJoinRoomNotification join_room_notification = 11;
    C2SLeaveRoomRequest leave_room_request = 12;
    S2CLeaveRoomResponse leave_room_response = 13;
    S2CLeaveRoomNotification leave_room_notification = 14;
    C2SGameReadyRequest game_ready_request = 15;
    S2CGameReadyResponse game_ready_response = 16;
    S2CGameReadyNotification game_ready_notification = 17;
    C2SGamePrepareRequest game_prepare_request = 20;
    S2CGamePrepareResponse game_prepare_response = 21;
    S2CGamePrepareNotification game_prepare_notification = 22;
    C2SGameStartRequest game_start_request = 23;
    S2CGameStartResponse game_start_response = 24;
    S2CGameStartNotification game_start_notification = 25;

    // Game messages
    C2SPositionUpdateRequest position_update_request = 26;
    S2CPositionUpdateNotification position_update_notification = 27;
  }
}

enum PacketId {
  Unknown = 0;
  // Auth packets
  LoginRequest = 1;
  LoginResponse = 2;
  
  // Lobby packets
  CreateRoomRequest = 3;
  CreateRoomResponse = 4;
  GetRoomListRequest = 5;
  GetRoomListResponse = 6;
  JoinRoomRequest = 7;
  JoinRoomResponse = 8;
  JoinRandomRoomRequest = 9;
  JoinRandomRoomResponse = 10;
  JoinRoomNotification = 11;
  LeaveRoomRequest = 12;
  LeaveRoomResponse = 13;
  LeaveRoomNotification = 14;
  GameReadyRequest = 15;
  GameReadyResponse = 16;
  GameReadyNotification = 17;
  GamePrepareRequest = 18;
  GamePrepareResponse = 19;
  GamePrepareNotification = 20;
  GameStartRequest = 21;
  GameStartResponse = 22;
  GameStartNotification = 23;

  // Game messages
  PositionUpdateRequest = 24;
  PositionUpdateNotification = 25;
}
